[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
itertools = "0.12.0"
pathfinding = "4.8.2"
petgraph = "0.6.4"
rand = "0.8.5"
regex = "1.10.3"
serde = "1.0.196"
